--- a/app/globals.css
+++ b/app/globals.css
@@ -151,3 +151,14 @@
 .glow-pulse {
   animation: glow-pulse 8s ease-in-out infinite;
 }
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+  appearance: textfield;
+}
