Duplicate finder, dark mode, auto theme switcher, archive playlist remover, new font, updated design

--- a/app/globals.css
+++ b/app/globals.css
@@ -162,3 +162,12 @@ input[type="number"] {
   -moz-appearance: textfield;
   appearance: textfield;
 }
+
+input[type="checkbox"] {
+  accent-color: #059669;
+  background-color: #fff;
+}
+
+.dark input[type="checkbox"] {
+  background-color: #0f172a;
+}
